# dynamic-k8s-stuff

./: Cargo.toml  kubeconfig
src/: main.rs
