[package]
name = "fflex-k8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.24"
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
kube = { version = "0.75.0", features = ["runtime", "derive", "kube-client", "admission", "ws"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["rt", "net", "macros", "rt-multi-thread", "io-util"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["v4"] }
